[package]
name = "scribblekit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["validation"]
validation = []

[dependencies]
anyhow = "1.0.81"
ash = "0.38"
ash-window = "0.13.0"
thiserror = "1.0.58"
winit = "0.29.15"
